--- a/src/app/pages/inventario/filtro/filtro.component.css
+++ b/src/app/pages/inventario/filtro/filtro.component.css
@@ -30,6 +30,21 @@
     flex-direction: column;
     align-items: center;
   }
+
+  .add-patr{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #add-list{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;  
+
+  }
   }
 
 
