responsividade da landing page

--- a/src/app/pages/landingpage/landingpage.component.html
+++ b/src/app/pages/landingpage/landingpage.component.html
@@ -1,4 +1,9 @@
 <body>
+
+<button id="btnToTop" class="flex items-center justify-center fixed z-50 bg-white w-14 h-14 rounded-full btnToTop">
+  <svg data-name="1-Arrow Up" id="arrowTop" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path d="m26.71 10.29-10-10a1 1 0 0 0-1.41 0l-10 10 1.41 1.41L15 3.41V32h2V3.41l8.29 8.29z"/></svg>
+</button>
+
 <div class="wallpaper flex items-center overflow-hidden">
   <div class="heroLeft flex justify-center items-center flex-col">
     <h1 class="font-semibold text-9xl text-white">Patrify</h1>
@@ -7,7 +12,7 @@
     <img src="../../../assets/imgs/scrollicon.png" class="animate-bounce">
   </div>
 </div>     
-<div class="contentOne">
+<div class="contentOne" id="contentOne">
   <div class="contentOne-left">
     <h1 class="font-bold" id="contentOne-title">APLICAÇÃO</h1>
   </div>
@@ -35,7 +40,7 @@
     </div>
     <div class="card" id="card2">
       <h1>Facilidade de Uso:</h1>
-      <p>Interface amigável e Responsiva.</p>
+      <p>Interface amigável e moderna.</p>
     </div>
     <div class="card" id="card3">
       <h1>Automatização de Processos:</h1>
@@ -89,12 +94,7 @@
     </div>
   </div>
 </div>
-<div class="contentFour">
-  <div class="contentFour-wave">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#cccccc" fill-opacity="1" d="M0,128L0,192L205.7,192L205.7,288L411.4,288L411.4,128L617.1,128L617.1,160L822.9,160L822.9,224L1028.6,224L1028.6,224L1234.3,224L1234.3,32L1440,32L1440,0L1234.3,0L1234.3,0L1028.6,0L1028.6,0L822.9,0L822.9,0L617.1,0L617.1,0L411.4,0L411.4,0L205.7,0L205.7,0L0,0L0,0Z"></path></svg>
-  </div>
-  <h1>COLABORADORES</h1>
-</div>
+
 <div class="Footer">
   <div class="footerTop">
     <div class="footerTop-left"></div>
