corrigindo landing page

--- a/src/app/pages/landingpage/landingpage.component.html
+++ b/src/app/pages/landingpage/landingpage.component.html
@@ -78,7 +78,7 @@
         </div>
           <div class = "column"> 
           <div class = "inner-element">
-            <h2>DESCARTE INTELIGENTE</h2>
+            <h2>DESCARTE</h2>
             <p>O recurso de Descarte Inteligente do Patrify exibe as localizações das empresas que estão aptas a realizar o descarte adequado conforme especificado na barra de pesquisa. Isso facilita aos usuários encontrar facilmente pontos de descarte apropriados, promovendo uma gestão responsável de resíduos e materiais.</p>
           </div>
             <div class="icons"><p>3</p></div>
